AB-1109 Use camel case key names in JSON encoding and query parameters.
